# bitcoin-handshake-example

./: Cargo.toml  README.md  btc-dns-seeds.txt  mainnet_config.toml  testnet_config.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/protocol/: handshake.rs  messages.rs
src/protocol/messages/: mod.rs  verack.rs  version.rs
