[package]
name = "bitcoin-p2p-example"
version = "0.0.1"
edition = "2021"
authors = ["Djordje Pesic 91pesic@gmail.com"]
description = "Example of handshake with bitcoin node"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
simple_logger = "4.0"
figment = { version = "0.10", features = ["toml", "env"] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }