[package]
name = "bitcoin-p2p-example"
version = "0.0.1"
edition = "2021"
authors = ["Djordje Pesic 91pesic@gmail.com"]
description = "Example of handshake with bitcoin node"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
clap = { version = "4.0.26", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3.27"
hex = "0.4.3"
log = "0.4"
rand = "0.8.5"
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.10.6"
simple_logger = {version = "4.0", features = ["colored"]}
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }